<resources>
    <string name="app_name">RController</string>
    <string name="reinit_button_text">Leave</string>
    <string name="uri_edit_text_hint">http://domain:port/</string>
    <string name="uri_set_button_text">Confirm</string>
    <string name="cmd_edit_text_hint">&lt;command&gt; [arguments]</string>
    <string name="cmd_send_button_text">Send</string>
    <string name="menu_gpsr">GPSR</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="arguments">arguments</string>

    <string name="send_button">SEND</string>

    <string name="cate_pub">Publisher</string>
    <string name="cate_sub">Subscriber</string>
    <string name="hz_edit_text_hint">Hz</string>
    <string name="publish_times_edit_text_hint">Times</string>
    <string name="focus_button_text">Focus</string>
    <string name="shutdown_button_text">Shutdown</string>
    <string name="start_button_text">Start</string>
    <string name="add_topic">Add Topic</string>
    <string name="create_new_topic_dialog_title">Create a new topicName</string>
    <string name="dialog_add_topic_confirm_confirm">Confirm</string>
    <string name="topic_name">Topic Name</string>
    <string name="reset_topic_list">Reset Topic List</string>
    <string name="dialog_add_topic_confirm_cancel">Cancel</string>
    <string name="select_master_button">SELECT MASTER</string>
    <string name="dialog_add_topic_confirm_title">Add Topic</string>
    <string name="status_published">Published</string>
</resources>
